--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
       <div class="row top-bar">
         <div class="offset-by-four one-third column middle-top-bar">MATTHEW PATERNO</div>
         <div class="one-third column right-top-bar">
-          <a href="mailto:mpaterno@live.com" class="button button-primary">test</a>
+          <a href="mailto:mpaterno@live.com" class="email-button">
+            <img class="email-button" src="img/email-button.svg">
+          </a>
         </div>
       </div>
       <div class="container">
@@ -40,7 +42,7 @@
           <div class="perspective-effect intro header-text">
             <div class="header-text">
               <div class="title">Hi, I'm Matt.</div>
-              <h2>I study computers at UCLA and want to apply what've I've learned so far.</h2>
+              <h2>I study computer engineering at UCLA and want to apply what've learned so far.</h2>
             </div>
             <h5>
               <a href="#resume" class="button track-click" style="color:white">Jump to resume.</a>
@@ -49,16 +51,14 @@
         </div>
       </div>
     </div>
-    <div class="u-full-width" style="background-color:#f7d969">
-      <div class="container" id="aboutme">
-        <div class="about-blob">
-          <h2 class="about-text">
-            I'm a business-minded engineering student with a passion for tech and social entrepreneurship. 
-            At UCLA, I've worked to lower UCLA's carbon footprint by raising money for clean energy installments 
-            and advocating for reduced trash production. But this past year, I've discovered the power of code and
-            love it.
-          </h2>
-        </div>
+    <div class="u-full-width about-blob">
+      <div class="container about-container" id="aboutme">
+          <div class="about-text">
+            I'm a business-minded engineering student with a passion for tech and social entrepreneurship. I 
+            have applied that passion at UCLA by leading projects to lower UCLA's carbon footprint including 
+            raising money for clean energy installments and advocating for reduced waste production. But this 
+            past year, I've discovered the power of code and love it.
+          </div>
       </div>
     </div>
     <div class="u-full-width resume-container">
@@ -85,30 +85,29 @@
           <div class="res-bold">
             Inderkum High School | IB Diploma
           </div>
-          I attended Inderkum HS of the North Sacramento area.
+          I attended Inderkum HS in Sacramento, CA.
         </div>
       </div>
       <div class="row has-scroll-reveal animation fadeInUp">
         <div class="two columns res-title"> Experience </div>
         <div class="nine columns res-description">
           <div class="res-bold"> Marketing Intern | Startup UCLA (2018 - ) </div>
-            I manage all social media accounts and marketing outreach. I create media 
-            content via the Adobe Creative Suite as well as developing brand recognition 
-            beyond the student body. 
+            I manage and support both Startup UCLA and Blackstone Launchpad's digital marketing 
+            efforts. Work includes content creation for social medias, website, and newsletters 
+            with over 7,000 subscribers. I create media content via the Adobe Creative Suite 
+            while strengthening brand recognition beyond the student body. 
           <div class="res-bold">
             Renewable Energy Association Solar Team Project Lead and Marketing Co - Chair (2016 - )
           </div>
           <p> 
-            Lead a team of twenty students to offset UCLA's large energy consumption to 
-            on-campus clean energy sources. Facilitate student involvement in achieving 
-            large scale grants and projects. Collaborate with UCLA's Sustainability 
-            Department, Recreation Department, and other student organizations for efficient 
-            energy project implementations. 
+            Leading a team of over twenty students to implement solar systems on campus. 
+            Last March, I was awarded $15,000 to install solar umbrellas on campus. Currently 
+            advocating for funds and approval from UCLA Facilities Administration to install a 
+            thermal heating system.
           </p>
-          Elected onto the executive board as Marketing and Membership Chair. Created 
-          marketing strategies for career fair and keynote speaker events. Ran Facebook ads 
-          and other social media platforms for online student outreach as well as distribution 
-          of print advertising on campus. Built the organization alumni network.
+          Serving on the association's executive board as Marketing Chair, leading outreach
+          efforts to all student backgrounds as well as managing project plans for various 
+          marketing and event activities.
           <div class="res-bold">
             Hanna Group Construction Management Student Assistant (2015)
           </div>
@@ -132,11 +131,10 @@
           <div class="res-bold">
             UCLA Audio/Video Tech (2016 - )
           </div>
-          Oversee and assist in the set up, operate, troubleshoot, and tear down of audio visual 
-          equipment for all events in the student union, including keynote speaker events to job 
-          fairs, often accommodating over 1000 participants. Accountable for timely setups and 
-          client correspondences and ability to prioritize and handle multiple assignments under 
-          tight deadlines.
+          Directing, overseeing, and training new staff on event set-ups from keynote speakers 
+          to job fairs. Account-able for timely setups and client correspondence. Quick 
+          troubleshooting and expertise with all built-in audio/stage equipment in the student 
+          union. 
           <div class="res-bold">
             Bruin Home Solutions (2016 - )
           </div>
@@ -179,7 +177,7 @@
     </div>
     <footer>
       <div class="footer">
-        &copy Matthew Paterno. Build on the Skeleton Framework.
+        &copy Matthew Paterno 2018. Built with Skeleton.
       </div>
     </footer>
   
@@ -190,7 +188,6 @@
     <script src="js/scrollreveal.js"></script>
     <script src="js/customreveal.js"></script>
     <script src="js/easing-scroll.js"></script>
-    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
     <!-- End Document
       –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   </body>
